[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="AdButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 510.0
margin_bottom = 298.0
size_flags_vertical = 3
text = "Ad"

[node name="RewardAdButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_vertical = 3
text = "Reward Ad"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_right = 510.0
margin_bottom = 197.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 253.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveDataButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_right = 253.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveData"

[node name="LoadDataButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 253.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "LoadData"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Some data"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 201.0
margin_right = 510.0
margin_bottom = 398.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_right = 253.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveStatButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer"]
margin_right = 253.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveStat"

[node name="LoadStatButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer"]
margin_top = 100.0
margin_right = 253.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "LoadStat"

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1e+07

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 402.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_top = 83.0
margin_right = 510.0
margin_bottom = 114.0
size_flags_horizontal = 3
text = "jgvhgvjggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg"
autowrap = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/AdButton" to="." method="_on_AdButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/RewardAdButton" to="." method="_on_RewardAdButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/SaveDataButton" to="." method="_on_SaveDataButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/LoadDataButton" to="." method="_on_LoadDataButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer/SaveStatButton" to="." method="_on_SaveStatButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer/LoadStatButton" to="." method="_on_LoadStatButton_pressed"]
